commit translated contents

--- a/docs/architecture/blazor-for-web-forms-developers/toc.yml
+++ b/docs/architecture/blazor-for-web-forms-developers/toc.yml
@@ -25,7 +25,7 @@
       href: middleware.md
     - name: Configurazione
       href: config.md
-    - name: Sicurezza
+    - name: Security
       href: security-authentication-authorization.md
     - name: Migrazione
       href: migration.md
