--- a/docs/architecture/cloud-native/toc.yml
+++ b/docs/architecture/cloud-native/toc.yml
@@ -72,7 +72,7 @@
           href: monitoring-azure-kubernetes.md
         - name: Monitoraggio di Azure
           href: azure-monitor.md
-    - name: identità
+    - name: Identità
       href: identity.md
       items:
         - name: Autenticazione e autorizzazione nelle app cloud native
@@ -81,7 +81,7 @@
           href: azure-active-directory.md
         - name: Identity Server
           href: identity-server.md
-    - name: Security
+    - name: Sicurezza
       href: security.md
       items:
         - name: Sicurezza di Azure per le app cloud native
