--- a/docs/framework/wpf/getting-started/toc.yml
+++ b/docs/framework/wpf/getting-started/toc.yml
@@ -5,7 +5,7 @@
       href: introduction-to-wpf-in-vs.md
     - name: Novità di WPF versione 4.5
       href: whats-new.md
-    - name: 'Procedura dettagliata: Prima applicazione desktop WPF'
+    - name: 'Procedura dettagliata: Compilare una prima applicazione desktop WPF'
       href: walkthrough-my-first-wpf-desktop-application.md
     - name: Procedure dettagliate di WPF
       href: wpf-walkthroughs.md
