--- a/docs/framework/unmanaged-api/toc.yml
+++ b/docs/framework/unmanaged-api/toc.yml
@@ -25,7 +25,7 @@
       href: strong-naming/
     - name: WMI e contatori delle prestazioni
       href: wmi/
-    - name: Funzioni di supporto Tlbexp
+    - name: Funzioni helper Tlbexp
       href: tlbexp/
     - name: Attributo GUID_ManagedName
       href: guid-managedname-attribute.md
